--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,72 @@
-p {
-  font-family: Lato;
+.tooltip {
+  position: absolute;
+  z-index: 3000;
+  border: 1px solid #b7b086;
+  background-color: white;
+  color: #000 !important;
+  padding: 5px 15px 5px 10px;
+  opacity: 1;
+  width: 350px;
+}
+.Search {
+  font-size: 0.75rem;
+}
+.SearchBold {
+  font-size: 0.7rem;
+  font-weight: bold;
+}
+.SearchBtnDetail {
+  font-size: 0.75rem;
+  margin-left: 25%;
+}
+input[type='text'] {
+  font-size: 0.75rem;
+}
+table {
+  width: 100%;
+}
+.cvsBGColor {
+  background-color: #cc0000;
+  color: #fff;
+  border-color: transparent;
+}
+.mat-header-cell {
+  background: #cc0000;
+  color: #fff;
+}
+.mat-cell {
+  font-size: 12px;
+}
+.form-group {
+  margin-bottom: 0rem;
+  margin-top: 0.3rem;
+}
+.ng-autocomplete ::ng-deep .autocomplete-container {
+  font-size: 10px;
+  border: 10px;
+  height: 23px;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.87);
+}
+::ng-deep .autocomplete-container .active {
+  z-index: 999;
+}
+.ng-autocomplete ::ng-deep .autocomplete-container .input-container input {
+  font-size: 11px;
+  box-sizing: border-box;
+  border: none;
+  box-shadow: none;
+  outline: 0;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.87);
+  height: 23px;
+  /*width: 100%;
+    padding: 0 0px;
+    line-height: 10px;
+    height: 10px;*/
+}
+
+#divScroll {
+  height: 80%;
+  font-size: 10px;
 }
