--- a/src/app/global-search/global-search.component.html
+++ b/src/app/global-search/global-search.component.html
@@ -458,11 +458,11 @@
                     type="button"
                     (click)="search()"
                     value="Filter"
-                    class="btn search-btn SearchBtnDetail cvsBGColor"
+                    class="btn search-btn SearchBtnDetail buttonColor"
                   />&nbsp;
                   <input
                     type="button"
-                    class="btn search-btn Search cvsBGColor"
+                    class="btn search-btn Search buttonColor"
                     value="Clear"
                     (click)="Clear()"
                   />
@@ -522,7 +522,7 @@
           <th mat-header-cell *matHeaderCellDef>Print</th>
           <td mat-cell *matCellDef="let row">
             <button
-              class="btn search-btn Search cvsBGColor"
+              class="btn search-btn Search buttonColor"
               style="margin-top:-2%;"
               printSectionId="print-section"
               ngxPrint
