--- a/src/app/global-search/global-search.component.html
+++ b/src/app/global-search/global-search.component.html
@@ -15,16 +15,11 @@
         <div class="col-xl-2">
           <div class="form-group">
             <label class="SearchBold">Business Segment</label>
-            <input
-              type="text"
-              placeholder="Pick one"
-              aria-label="Search"
-              matInput
-              [(ngModel)]="selectedBusinessNameMain"
-              [matAutocomplete]="auto"
-              (input)="filter()"
-            />
-            <mat-autocomplete #auto="matAutocomplete">
+            <mat-select
+              style="font-size:11px;border-bottom:1px solid grey;"
+              (selectionChange)="onBSegmentChange($event)"
+              [(value)]="selectedBusinessNameMain"
+            >
               <mat-option
                 *ngFor="let option of BusinessNameMain"
                 [value]="option.Code"
@@ -32,7 +27,7 @@
               >
                 {{ option.State }}
               </mat-option>
-            </mat-autocomplete>
+            </mat-select>
           </div>
         </div>
         <div class="col-xl-2">
@@ -238,7 +233,7 @@
         <div class="col-xl-2">
           <input
             type="button"
-            (click)="searchAPI()"
+            (click)="searchAPIDashbaord()"
             value="Search"
             class="btn search-btn Search buttonColor"
           />
@@ -255,82 +250,281 @@
   </p>
 </div>
 
-<div class="container">
+<div>
   <div class="row">
-    <div style="width:80%;margin-left:1rem;">
+    <div
+      style="width: 20%; margin-left: 40px; border-right: 0.25px solid lightgray"
+    >
+      <div class="col-md-13 col-md-offset-2">
+        <div
+          class="panel-heading text-center"
+          style="margin-left: -2rem; background-color: #cc0000; color: #fff"
+        >
+          <strong>Filter</strong>
+        </div>
+
+        <div class="row" style="margin-left: -2rem">
+          <div class="col-md-13" id="crit2" style="">
+            <div class="panel panel-default" id="LeftSide">
+              <div class="panel-body">
+                <div class="form-group">
+                  <label class="SearchBold">Document Type</label>
+                  <!--<ng-autocomplete [data]="BusinessName" [searchKeyword]="keywordBusinessName" [(ngModel)]="selectedBusinessName" (selected)='onBusinessNameSelected($event)'
+            (inputChanged)='onChangeSearchBusinessName($event)' (inputFocused)='onFocusedBusinessName($event)' [itemTemplate]="itemTemplateBusinessName"
+            [notFoundTemplate]="notFoundTemplate" (inputCleared)='clearBusinessName()'>
+          </ng-autocomplete>
+          <ng-template #itemTemplateBusinessName let-item>
+            <a [innerHTML]="item" style="font-size:0.75rem;"></a>
+          </ng-template>-->
+                  <mat-select
+                    style="font-size: 11px; border-bottom: 1px solid grey"
+                    (selectionChange)="onDocumentTypeSelected($event)"
+                    [(value)]="selectedDocumentType"
+                  >
+                    <mat-option
+                      *ngFor="let option of DocumentType"
+                      [value]="option.Code"
+                      style="font-size: 11px"
+                    >
+                      {{ option.State }}
+                    </mat-option>
+                  </mat-select>
+                </div>
+                <div class="form-group">
+                  <label class="SearchBold">Business Segment</label>
+                  <!--<ng-autocomplete [data]="BusinessName" [searchKeyword]="keywordBusinessName" [(ngModel)]="selectedBusinessName" (selected)='onBusinessNameSelected($event)'
+            (inputChanged)='onChangeSearchBusinessName($event)' (inputFocused)='onFocusedBusinessName($event)' [itemTemplate]="itemTemplateBusinessName"
+            [notFoundTemplate]="notFoundTemplate" (inputCleared)='clearBusinessName()'>
+          </ng-autocomplete>
+          <ng-template #itemTemplateBusinessName let-item>
+            <a [innerHTML]="item" style="font-size:0.75rem;"></a>
+          </ng-template>-->
+                  <mat-select
+                    style="font-size: 11px; border-bottom: 1px solid grey"
+                    (selectionChange)="onBusinessNameSelected($event)"
+                    [(value)]="selectedBusinessName"
+                  >
+                    <mat-option
+                      *ngFor="let option of BusinessName"
+                      [value]="option.State"
+                      style="font-size: 11px"
+                    >
+                      {{ option.State }}
+                    </mat-option>
+                  </mat-select>
+                </div>
+                <div class="form-group">
+                  <label class="SearchBold">State</label>
+                  <!--<ng-autocomplete [data]="State" [searchKeyword]="keywordState" [(ngModel)]="selectedState" (selected)='onStateSelected($event)'
+            (inputChanged)='onChangeSearchState($event)' (inputFocused)='onFocusedState($event)' [itemTemplate]="itemTemplateState"
+            [notFoundTemplate]="notFoundTemplate" (inputCleared)='clearState()'>
+          </ng-autocomplete>
+          <ng-template #itemTemplateState let-item>
+            <a [innerHTML]="item" style="font-size:0.75rem;"></a>
+          </ng-template>-->
+                  <mat-select
+                    style="font-size: 11px; border-bottom: 1px solid grey"
+                    [(value)]="selectedState"
+                    (selectionChange)="onStateSelected($event)"
+                  >
+                    <mat-option
+                      *ngFor="let option of State"
+                      [value]="option.Code"
+                      style="font-size: 11px"
+                    >
+                      {{ option.State }}
+                    </mat-option>
+                  </mat-select>
+                </div>
+                <div class="form-group">
+                  <label class="SearchBold">County</label>
+                  <ng-autocomplete
+                    [data]="County"
+                    [searchKeyword]="keywordCounty"
+                    [(ngModel)]="selectedCounty"
+                    (selected)="onCountySelected($event)"
+                    (inputChanged)="onChangeSearchCounty($event)"
+                    (inputFocused)="onFocusedCounty($event)"
+                    [itemTemplate]="itemTemplateCounty"
+                    [notFoundTemplate]="notFoundTemplate"
+                    (inputCleared)="clearCounty()"
+                  >
+                  </ng-autocomplete>
+                  <ng-template #itemTemplateCounty let-item>
+                    <a [innerHTML]="item" style="font-size: 0.75rem"></a>
+                  </ng-template>
+                </div>
+                <div class="form-group">
+                  <label class="SearchBold">City</label>
+                  <ng-autocomplete
+                    [data]="City"
+                    [searchKeyword]="keywordCity"
+                    [(ngModel)]="selectedCity"
+                    (selected)="selectEventCity($event)"
+                    (inputChanged)="onChangeSearchCity($event)"
+                    (inputFocused)="onFocusedCity($event)"
+                    [itemTemplate]="itemTemplate"
+                    [notFoundTemplate]="notFoundTemplate"
+                    (inputCleared)="clearCity()"
+                  >
+                  </ng-autocomplete>
+                  <ng-template #itemTemplate let-item>
+                    <a [innerHTML]="item" style="font-size: 0.75rem"></a>
+                  </ng-template>
+                </div>
+                <div class="form-group">
+                  <label class="SearchBold">Zip Code</label>
+                  <ng-autocomplete
+                    #ngAutoCompleteStatic
+                    [data]="ZipCode"
+                    name="ZipCode"
+                    [(ngModel)]="selectedZipCode"
+                    [initialValue]=""
+                    [placeholder]="placeholder"
+                    [searchKeyword]="keywordZipCode"
+                    notFoundText="Not found"
+                    [itemTemplate]="itemTemplateStatic"
+                    [notFoundTemplate]="notFoundTemplate"
+                    (selected)="selectEventZipCode($event)"
+                    (inputChanged)="onChangeSearchZipCode($event)"
+                    (inputFocused)="onFocusedZipCode($event)"
+                    (inputCleared)="clearZipCode()"
+                  >
+                  </ng-autocomplete>
+                  <ng-template #itemTemplateStatic let-item>
+                    <a [innerHTML]="item" style="font-size: 0.75rem"></a>
+                  </ng-template>
+                </div>
+                <div class="form-group">
+                  <label class="SearchBold">License Type</label>
+                  <!--<ng-autocomplete #ngAutoCompleteLicenseType [data]="LicenseType" name="LicenseType" [(ngModel)]="selectedLicenseType" [initialValue]=""
+            [placeholder]="placeholder" [searchKeyword]="keywordLicenseType" notFoundText="Not found" [itemTemplate]="itemTemplateLicenseType"
+            [notFoundTemplate]="notFoundTemplate" (selected)='selectEventLicenseType($event)' (inputChanged)='onChangeSearchLicenseType($event)'
+            (inputFocused)='onFocusedLicenseType($event)' (inputCleared)='clearLicenseType()'>
+          </ng-autocomplete>
+          <ng-template #itemTemplateLicenseType let-item>
+            <a [innerHTML]="item" style="font-size:0.75rem;"></a>
+          </ng-template>-->
+                  <mat-select
+                    style="font-size: 11px; border-bottom: 1px solid grey"
+                    [(value)]="selectedLicenseType"
+                    (selectionChange)="selectEventLicenseType($event)"
+                  >
+                    <mat-option
+                      *ngFor="let option of LicenseType"
+                      [value]="option.Code"
+                      style="font-size: 11px"
+                    >
+                      {{ option.State }}
+                    </mat-option>
+                  </mat-select>
+                </div>
+                <div class="form-group">
+                  <label class="SearchBold">Store Number</label>
+                  <ng-autocomplete
+                    #ngAutoCompleteShopNumber
+                    [data]="ShopNumber"
+                    name="ShopNumber"
+                    [(ngModel)]="selectedShopNumber"
+                    [initialValue]=""
+                    [placeholder]="placeholder"
+                    [searchKeyword]="keywordShopNumber"
+                    notFoundText="Not found"
+                    [itemTemplate]="itemTemplateShopNumber"
+                    [notFoundTemplate]="notFoundTemplate"
+                    (selected)="selectEventShopNumber($event)"
+                    (inputChanged)="onChangeSearchShopNumber($event)"
+                    (inputFocused)="onFocusedShopNumber($event)"
+                    (inputCleared)="clearShopNumber()"
+                  >
+                  </ng-autocomplete>
+                  <ng-template #itemTemplateShopNumber let-item>
+                    <a [innerHTML]="item" style="font-size: 0.75rem"></a>
+                  </ng-template>
+                </div>
+                <!--<div class="form-group">
+          <label class="SearchBold">Archive</label>
+          <br/>
+          <mat-checkbox (click)="$event.stopPropagation()">
+          </mat-checkbox>
+          
+        </div>-->
+                <!--<div class="form-group">
+          <label class="SearchBold">Upload Date</label>
+          <input type="date" class="form-control" style="font-size:12px;" [(ngModel)]="selectedExpiryDate">
+        </div>-->
+                <div class="form-group" style="margin-top: -1rem">
+                  <input
+                    type="button"
+                    (click)="search()"
+                    value="Filter"
+                    class="btn search-btn SearchBtnDetail buttonColor"
+                  />&nbsp;
+                  <input
+                    type="button"
+                    class="btn search-btn Search buttonColor"
+                    value="Clear"
+                    (click)="Clear()"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div style="width:75%;">
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <!-- Checkbox Column -->
-        <ng-container matColumnDef="Select">
+        <!--<ng-container matColumnDef="Select">
           <th mat-header-cell *matHeaderCellDef></th>
+        </ng-container>-->
+        <ng-container matColumnDef="StoreId">
+          <th mat-header-cell *matHeaderCellDef>Store#</th>
+          <td mat-cell *matCellDef="let element">{{ element.StoreId }}</td>
         </ng-container>
-        <ng-container matColumnDef="BusniessSegment">
-          <th mat-header-cell *matHeaderCellDef>Business Segment</th>
-          <td mat-cell *matCellDef="let element">{{ element.BusinessName }}</td>
+        <ng-container matColumnDef="DocumentType">
+          <th mat-header-cell *matHeaderCellDef>DocumentType</th>
+          <td mat-cell *matCellDef="let element">{{ element.DocumentType }}</td>
         </ng-container>
-        <ng-container matColumnDef="State">
-          <th mat-header-cell *matHeaderCellDef>State</th>
-          <td mat-cell *matCellDef="let element">{{ element.State }}</td>
+        <ng-container matColumnDef="DocumentDate">
+          <th mat-header-cell *matHeaderCellDef>DocumentDate</th>
+          <td mat-cell *matCellDef="let element">{{ element.DocumentDate }}</td>
         </ng-container>
-        <ng-container matColumnDef="County">
-          <th mat-header-cell *matHeaderCellDef>County</th>
-          <td mat-cell *matCellDef="let element">{{ element.County }}</td>
-        </ng-container>
-        <ng-container matColumnDef="City">
-          <th mat-header-cell *matHeaderCellDef>City</th>
-          <td mat-cell *matCellDef="let element">{{ element.City }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="ZipCode">
-          <th mat-header-cell *matHeaderCellDef>ZipCode</th>
-          <td mat-cell *matCellDef="let element">{{ element.ZipCode }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="ShopNumber">
-          <th mat-header-cell *matHeaderCellDef>Store Number</th>
-          <td mat-cell *matCellDef="let element">{{ element.ShopNumber }}</td>
-        </ng-container>
-        <ng-container matColumnDef="ExpiryDate">
-          <th mat-header-cell *matHeaderCellDef>Expiry Date</th>
+        <ng-container matColumnDef="UploadDateTime">
+          <th mat-header-cell *matHeaderCellDef>UploadDateTime</th>
           <td mat-cell *matCellDef="let element">
-            {{ getFormattedDate(element.ExpiryDate) }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="LicenseNumber">
-          <th mat-header-cell *matHeaderCellDef>License Number</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.LicenseNumber }}
+            {{ element.UploadDateTime }}
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="Download">
-          <th mat-header-cell *matHeaderCellDef>Print</th>
-          <td mat-cell *matCellDef="let row">
-            <button
-              class="btn search-btn Search buttonColor"
-              style="margin-top:-2%;"
-              printSectionId="print-section"
-              ngxPrint
-              [disabled]="!selection.isSelected(row)"
-            >
-              Print
-            </button>
+        <ng-container matColumnDef="EmployeeName">
+          <th mat-header-cell *matHeaderCellDef>EmployeeName</th>
+          <td mat-cell *matCellDef="let element">{{ element.EmployeeName }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="EmployeeID">
+          <th mat-header-cell *matHeaderCellDef>Employee ID</th>
+          <td mat-cell *matCellDef="let element">{{ element.EmployeeID }}</td>
+        </ng-container>
+        <ng-container matColumnDef="PageScanned">
+          <th mat-header-cell *matHeaderCellDef>PageScanned</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.PageScanned }}
           </td>
         </ng-container>
+        <ng-container matColumnDef="Image">
+          <th mat-header-cell *matHeaderCellDef>Image</th>
+          <td mat-cell *matCellDef="let element">
+            <a href="{{ element.BlobURL }}" target="_blank">
+              <img src="{{ element.Image }}" width="35" height="35"
+            /></a>
+          </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr
-          mat-row
-          *matRowDef="let row; columns: displayedColumns"
-          (click)="selection.toggle(row)"
-        ></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
-
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 20]"
-        [pageSize]="5"
-        showFirstLastButtons
-        aria-label="Select page of periodic elements"
-      >
-      </mat-paginator>
     </div>
   </div>
 </div>
