--- a/src/app/global-search/global-search.component.html
+++ b/src/app/global-search/global-search.component.html
@@ -12,7 +12,7 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
       <div class="row col-xl-13">
-        <div class="col-xl-2">
+       <div class="col-xl-2">
           <div class="form-group">
             <label class="SearchBold">Business Segment</label>
             <mat-select
@@ -89,7 +89,7 @@
         </div>
         <div class="col-xl-2">
           <div class="form-group">
-            <label class="SearchBold">Store Number</label>
+            <label class="SearchBold">Search Any Item</label>
             <div>
               <input
                 matInput
