--- a/src/app/global-search/global-search.component.css
+++ b/src/app/global-search/global-search.component.css
@@ -1,13 +1,15 @@
-.navbar {
+.mat-toolbar {
   background-color: #cc0000;
   color: #ffffff;
   height: 45px;
   width: 100%;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 20px;
+  margin: 0.5%;
+}
+.example-spacer {
+  flex: 1 1 auto;
+  display: block;
   text-align: center;
-  margin: 5px;
+  font-size: 18px;
 }
 
 .Search {
